GNU coreutils NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Improvements

  rm: rewrite to use gnulib's fts
  This makes rm -rf significantly faster (400-500%) in some pathological
  cases, and slightly slower (20%) in at least one pathological case.

  rm -r deletes deep hierarchies more efficiently.  Before, it took O(N^2)
  time, now it takes O(N).  However, this improvement is not as pronounced
  as might be expected for very deep trees, because prior to this change, for
  any relative name length longer than 8KiB, rm -r would sacrifice official
  conformance to avoid the disproportionate O(N^2) performance penalty.
  Leading to another improvement:

  rm -r is now slightly more standards-conformant when operating on
  write-protected relative file names longer than 8KiB.


* Noteworthy changes in release 7.6 (2009-09-11) [stable]

** Bug fixes

  cp, mv now ignore failure to preserve a symlink time stamp, when it is
  due to their running on a kernel older than what was implied by headers
  and libraries tested at configure time.
  [bug introduced in coreutils-7.5]

  cp --reflink --preserve now preserves attributes when cloning a file.
  [bug introduced in coreutils-7.5]

  cp --preserve=xattr no longer leaks resources on each preservation failure.
  [bug introduced in coreutils-7.1]

  dd now exits with non-zero status when it encounters a write error while
  printing a summary to stderr.
  [bug introduced in coreutils-6.11]

  dd cbs=N conv=unblock would fail to print a final newline when the size
  of the input was not a multiple of N bytes.
  [the non-conforming behavior dates back to the initial implementation]

  df no longer requires that each command-line argument be readable
  [bug introduced in coreutils-7.3]

  ls -i now prints consistent inode numbers also for mount points.
  This makes ls -i DIR less efficient on systems with dysfunctional readdir,