@@ -334,6 +334,7 @@ TESTS =						\
   du/slink					\
   du/trailing-slash				\
   du/two-args					\
+  id/no-context					\
   install/basic-1				\
   install/create-leading			\
   install/d-slashdot				\
